--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
-    compile 'com.turbomanage.basic-http-client:http-client-android:0.89'
-    compile 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.turbomanage.basic-http-client:http-client-android:0.89'
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.google.firebase:firebase-crash:15.0.0'
+    implementation 'com.google.firebase:firebase-config:15.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
